fix: dark mode

--- a/src/styles/prosemirror.css
+++ b/src/styles/prosemirror.css
@@ -1,3 +1,7 @@
+.ProseMirror {
+  @apply dark:prose-invert;
+}
+
 .ProseMirror:focus-visible {
   @apply outline-none;
 }
